--- a/.air.toml
+++ b/.air.toml
@@ -7,7 +7,7 @@ tmp_dir = "tmp"
   bin = "./tmp/main"
   cmd = "go build -o ./tmp/main cmd/tracks/tracks.go"
   delay = 1000
-  exclude_dir = ["assets", "tmp", "vendor", "testdata"]
+  exclude_dir = ["static", "tmp", "assets"]
   exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
