--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -8,5 +8,5 @@ sql:
       go:
         package: "repository"
         out: "repository"
-        sql_package: "pgx/v5"
+        sql_package: "database/sql"
 
