refactor DB access.
Introduced a repository layer between the handlers and sqlc. The
autogenerated code was becoming clunky to use, the mid-layer abstracts
away sql-ness of the repository.

--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -6,7 +6,7 @@ sql:
     schema: "db/schema.sql"
     gen:
       go:
-        package: "repository"
-        out: "repository"
+        package: "sqlc"
+        out: "repository/sqlc"
         sql_package: "database/sql"
 
