--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,6 +13,28 @@ jobs:
   build:
     name: Tests
     runs-on: ubuntu-latest
+
+     # Service containers to run with `build`
+    services:
+      # Label used to access the service container
+      postgres:
+        # Docker Hub image
+        image: postgis/postgis:17-3.5
+        # Provide the password for postgres
+        env:
+          POSTGRES_USER: tracks_test
+          POSTGRES_PASSWORD: 1234567
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          # Maps tcp port 5432 on service container to the host
+          - 5432:5432
+
+
     steps:
     - uses: actions/checkout@v4
 
