add startup script

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 # dev environment credentials
-DATABASE_URL="postgres://tracks:123456@127.0.0.1:5432/tracks?sslmode=disable"
+DATABASE_URL="postgres://${DB_USER}:${DB_PASSWORD}@127.0.0.1:5432/tracks?sslmode=disable"
+DB_USER="tracks"
+DB_PASSWORD="123456"
+DB_NAME="tracks"
+
+ADMIN_USER="admin"
